swagger-home search homes by text or by key
